--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "ts-node-dev": "^2.0.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write --ignore-unknown"
   }
 }
