--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev --respawn src/app.ts"
   },
   "dependencies": {
+    "apollo-server": "^3.12.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.6",
@@ -19,13 +20,20 @@
     "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "socket.io": "^4.6.1",
     "uuid": "^9.0.0",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.16.1",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.16.3",
+    "@types/validator": "^13.7.17",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tslib": "^2.5.0",
