--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node src/app.ts",
-    "dev": "ts-node-dev --respawn src/app.ts"
+    "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
     "apollo-server": "^3.12.0",
