--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node src/app.ts",
+    "tsc": "tsc",
+    "start": "node src/app.js",
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
